; ModuleID = '/home/carl/AnghaBench/lab/engine/code/botlib/extr_be_aas_route.c_AAS_ReachabilityFromNum.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/botlib/extr_be_aas_route.c_AAS_ReachabilityFromNum.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32*, i32 }
%struct.aas_reachability_s = type { i32 }

@aasworld = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @AAS_ReachabilityFromNum(i32 %0, %struct.aas_reachability_s* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.aas_reachability_s*, align 8
  store i32 %0, i32* %3, align 4
  store %struct.aas_reachability_s* %1, %struct.aas_reachability_s** %4, align 8
  %5 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @aasworld, i32 0, i32 2), align 8
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %10, label %7

7:                                                ; preds = %2
  %8 = load %struct.aas_reachability_s*, %struct.aas_reachability_s** %4, align 8
  %9 = call i32 @Com_Memset(%struct.aas_reachability_s* %8, i32 0, i32 4)
  br label %27

10:                                               ; preds = %2
  %11 = load i32, i32* %3, align 4
  %12 = icmp slt i32 %11, 0
  br i1 %12, label %17, label %13

13:                                               ; preds = %10
  %14 = load i32, i32* %3, align 4
  %15 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @aasworld, i32 0, i32 0), align 8
  %16 = icmp sge i32 %14, %15
  br i1 %16, label %17, label %20

17:                                               ; preds = %13, %10
  %18 = load %struct.aas_reachability_s*, %struct.aas_reachability_s** %4, align 8
  %19 = call i32 @Com_Memset(%struct.aas_reachability_s* %18, i32 0, i32 4)
  br label %27

20:                                               ; preds = %13
  %21 = load %struct.aas_reachability_s*, %struct.aas_reachability_s** %4, align 8
  %22 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @aasworld, i32 0, i32 1), align 8
  %23 = load i32, i32* %3, align 4
  %24 = sext i32 %23 to i64
  %25 = getelementptr inbounds i32, i32* %22, i64 %24
  %26 = call i32 @Com_Memcpy(%struct.aas_reachability_s* %21, i32* %25, i32 4)
  br label %27

27:                                               ; preds = %20, %17, %7
  ret void
}

declare dso_local i32 @Com_Memset(%struct.aas_reachability_s*, i32, i32) #1

declare dso_local i32 @Com_Memcpy(%struct.aas_reachability_s*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
